// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react customized options for image link 1`] = `
.emotion-2 {
  overflow: hidden;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  border: none;
  outline: none;
}

.emotion-0 {
  width: 100%;
  height: 0;
  color: #fff;
  background: #fff;
  padding-bottom: 80%;
}

.emotion-1 {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  color: #fff;
  background: #fff;
  -webkit-filter: blur(100px);
  filter: blur(100px);
  -webkit-transition: initial;
  transition: initial;
  -webkit-transform: scale3d(1.05,1.05,1);
  -ms-transform: scale3d(1.05,1.05,1);
  transform: scale3d(1.05,1.05,1);
}

<a
  className="emotion-2"
  href="https://example.com"
  target="_blank"
>
  <div
    className="emotion-0"
  />
  <img
    alt="Test image"
    className="emotion-1"
    src="placeholder.jpg"
    srcSet={null}
  />
</a>
`;

exports[`react customized options for normal image 1`] = `
.emotion-2 {
  overflow: hidden;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  border: none;
  outline: none;
}

.emotion-0 {
  width: 100%;
  height: 0;
  color: #fff;
  background: #fff;
  padding-bottom: 80%;
}

.emotion-1 {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  color: #fff;
  background: #fff;
  -webkit-filter: initial;
  filter: initial;
  -webkit-transition: initial;
  transition: initial;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <img
    alt="Test image"
    className="emotion-1"
    src="image.jpg"
    srcSet={null}
  />
</div>
`;

exports[`react parse valid input 1`] = `
.emotion-2 {
  overflow: hidden;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  border: none;
  outline: none;
}

.emotion-0 {
  width: 100%;
  height: 0;
  color: transparent;
  background: transparent;
  padding-bottom: 80%;
}

.emotion-1 {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  color: transparent;
  background: transparent;
  -webkit-filter: initial;
  filter: initial;
  -webkit-transition: initial;
  transition: initial;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <img
    alt="Test image"
    className="emotion-1"
    src="image.jpg"
    srcSet={null}
  />
</div>
`;
